--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,8 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-
-lib_deps =
-    Adafruit MPU6050 @ ^2.2.6
-    Adafruit BMP085 Unified @ ^1.1.3
-    TinyGPSPlus @ ^1.1.0
-    CC1101 @ ^1.0.0
+lib_deps = 
+	Adafruit MPU6050 @ ^2.2.6
+	Adafruit BMP085 Unified @ ^1.1.3
+	TinyGPSPlus @ ^1.1.0
+	jgromes/RadioLib@^7.1.2
