--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ lib_deps =
 [env:rocket_logger]
 platform = espressif8266
 board = nodemcuv2
-build_src_filter = +<rocket_data_logger.cpp> +<cc1101_radio.cpp>
+build_src_filter = +<rocket_data_logger.cpp> +<cc1101_radio.cpp> +<sx1278_radio.cpp>
 lib_deps = 
 	${env.lib_deps}
 	Adafruit MPU6050 @ ^2.2.6
@@ -27,7 +27,7 @@ lib_deps =
 [env:rocket_receiver]
 platform = espressif32
 board = esp32dev
-build_src_filter = +<rocket_telemetry_receiver.cpp> +<cc1101_radio.cpp>
+build_src_filter = +<rocket_telemetry_receiver.cpp> +<cc1101_radio.cpp> +<sx1278_radio.cpp>
 lib_deps = 
 	${env.lib_deps}
 	bodmer/TFT_eSPI@^2.5.31
