--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,26 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
+; Common settings for all environments
+[env]
 framework = arduino
 lib_deps = 
+	jgromes/RadioLib@^7.1.2
+
+[env:rocket_logger]
+platform = espressif8266
+board = nodemcuv2
+build_src_filter = +<rocket_data_logger.cpp>
+lib_deps = 
+	${env.lib_deps}
 	Adafruit MPU6050 @ ^2.2.6
 	Adafruit BMP085 Unified @ ^1.1.3
 	TinyGPSPlus @ ^1.1.0
-	jgromes/RadioLib@^7.1.2
+
+[env:rocket_receiver]
+platform = espressif32
+board = esp32dev
+build_src_filter = +<rocket_telemetry_receiver.cpp>
+lib_deps = 
+	${env.lib_deps}
+	bodmer/TFT_eSPI@^2.5.31
