--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ lib_deps =
 	Adafruit MPU6050 @ ^2.2.6
 	Adafruit BMP085 Unified @ ^1.1.3
 	TinyGPSPlus @ ^1.1.0
+	porrey/MAX1704X @ ^1.0.0
 
 [env:rocket_receiver]
 platform = espressif32
