--- a/platformio.ini
+++ b/platformio.ini
@@ -28,7 +28,7 @@ lib_deps =
 [env:rocket_receiver]
 platform = espressif32
 board = esp32dev
-build_src_filter = +<rocket_telemetry_receiver.cpp> +<cc1101_radio.cpp> +<sx1278_radio.cpp>
+build_src_filter = +<rocket_telemetry_receiver.cpp> +<cc1101_radio.cpp> +<sx1278_radio.cpp> +<XPT2046_Touchscreen.cpp>
 lib_deps = 
 	${env.lib_deps}
 	bodmer/TFT_eSPI@^2.5.31
