--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,4 @@ build_src_filter = +<rocket_telemetry_receiver.cpp> +<cc1101_radio.cpp> +<sx1278
 lib_deps = 
 	${env.lib_deps}
 	bodmer/TFT_eSPI@^2.5.31
+	porrey/MAX1704X @ ^1.0.0
