Update for ESP32-S3 with 240x320 ILI9341 display: Change board type, update pin configurations, make hardware initialization optional

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,9 @@ lib_deps =
 
 [env:rocket_receiver]
 platform = espressif32
-board = esp32dev
+board = esp32-s3-devkitc-1
+build_flags = -DARDUINO_USB_MODE=1 -DARDUINO_USB_CDC_ON_BOOT=1
+monitor_speed = 115200
 build_src_filter = +<rocket_telemetry_receiver.cpp> +<cc1101_radio.cpp> +<sx1278_radio.cpp> +<sx1262_radio.cpp> +<XPT2046_Touchscreen.cpp> +<rocket_monitor_screen.cpp>
 lib_deps = 
 	${env.lib_deps}
