Fix display issues and disable battery monitor to prevent crashes

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,8 +30,13 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 build_flags = -DARDUINO_USB_MODE=1 -DARDUINO_USB_CDC_ON_BOOT=1
 monitor_speed = 115200
-build_src_filter = +<rocket_telemetry_receiver.cpp> +<cc1101_radio.cpp> +<sx1278_radio.cpp> +<sx1262_radio.cpp> +<XPT2046_Touchscreen.cpp> +<rocket_monitor_screen.cpp>
+build_src_filter = +<rocket_telemetry_receiver.cpp> +<cc1101_radio.cpp> +<sx1278_radio.cpp> +<sx1262_radio.cpp> +<XPT2046_Touchscreen.cpp> +<rocket_monitor_screen.cpp> +<rocket_position_functions.cpp> +<rocket_drawing_functions.cpp>
 lib_deps = 
 	${env.lib_deps}
-	bodmer/TFT_eSPI@^2.5.31
+	adafruit/Adafruit GFX Library @ ^1.11.9
+	adafruit/Adafruit ILI9341 @ ^1.6.0
+	adafruit/Adafruit BusIO @ ^1.14.5
+	Preferences
 	porrey/MAX1704X @ ^1.0.0
+
+
