--- a/platformio.ini
+++ b/platformio.ini
@@ -15,15 +15,18 @@ lib_deps =
 	jgromes/RadioLib@^7.1.2
 
 [env:rocket_logger]
-platform = espressif8266
-board = nodemcuv2
+platform = espressif32
+board = esp32-c3-devkitm-1
 build_src_filter = +<rocket_data_logger.cpp> +<cc1101_radio.cpp> +<sx1278_radio.cpp> +<sx1262_radio.cpp> +<rocket_accelerometer.cpp>
+monitor_speed = 115200
 lib_deps = 
 	${env.lib_deps}
 	Adafruit MPU6050 @ ^2.2.6
 	Adafruit BMP085 Unified @ ^1.1.3
 	TinyGPSPlus @ ^1.1.0
 	porrey/MAX1704X @ ^1.0.0
+	xreef/PCF8574 library @ ^2.3.4
+	plerup/EspSoftwareSerial @ ^8.1.0
 
 [env:rocket_receiver]
 platform = espressif32
