--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; Common settings for all environments
 [env]
 framework = arduino
 lib_deps = 
 	jgromes/RadioLib@^7.1.2
 
-[env:rocket_logger]
+[env:rocket_logger_c3]
 platform = espressif32
 board = esp32-c3-devkitm-1
 build_src_filter = +<rocket_data_logger.cpp> +<cc1101_radio.cpp> +<sx1278_radio.cpp> +<sx1262_radio.cpp> +<rocket_accelerometer.cpp>
 monitor_speed = 115200
+upload_protocol = esptool
+build_flags = 
+	-DARDUINO_USB_MODE=1
+	-DARDUINO_USB_CDC_ON_BOOT=1
+	-DBOARD_TYPE=0
+upload_speed = 115200
+upload_resetmethod = nodemcu
+monitor_filters = esp32_exception_decoder
 lib_deps = 
 	${env.lib_deps}
 	Adafruit MPU6050 @ ^2.2.6
@@ -27,6 +34,24 @@ lib_deps =
 	porrey/MAX1704X @ ^1.0.0
 	xreef/PCF8574 library @ ^2.3.4
 	plerup/EspSoftwareSerial @ ^8.1.0
+	bblanchon/ArduinoJson@^6.21.5
+
+[env:rocket_logger_esp32]
+platform = espressif32
+board = esp32dev
+build_src_filter = +<rocket_data_logger.cpp> +<cc1101_radio.cpp> +<sx1278_radio.cpp> +<sx1262_radio.cpp> +<rocket_accelerometer.cpp>
+monitor_speed = 115200
+build_flags = 
+	-DBOARD_TYPE=1
+upload_speed = 115200
+lib_deps = 
+	${env.lib_deps}
+	Adafruit MPU6050 @ ^2.2.6
+	Adafruit BMP085 Unified @ ^1.1.3
+	TinyGPSPlus @ ^1.1.0
+	porrey/MAX1704X @ ^1.0.0
+	xreef/PCF8574 library @ ^2.3.4
+	bblanchon/ArduinoJson@^6.21.5
 
 [env:rocket_receiver]
 platform = espressif32
@@ -41,5 +66,4 @@ lib_deps =
 	adafruit/Adafruit BusIO @ ^1.14.5
 	Preferences
 	porrey/MAX1704X @ ^1.0.0
-
-
+	bblanchon/ArduinoJson@^6.21.5
